fix warnings from SonarQube